// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesReducers should handle all defined error types: rejected types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "images": Array [
        "success",
      ],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": true,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": true,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": true,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_PENDING",
}
`;
